--- a/index.ipynb
+++ b/index.ipynb
@@ -264,7 +264,7 @@
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7f678ee01780>"
+       "<folium.map.Marker at 0x7f7c99703ef0>"
       ]
      },
      "execution_count": 6,
