--- a/index.ipynb
+++ b/index.ipynb
@@ -417,11 +417,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = marker"
+    "la_boca_marker = marker_six"
    ]
   },
   {
