--- a/index.ipynb
+++ b/index.ipynb
@@ -466,9 +466,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<folium.map.Marker at 0x7f7c996b0588>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neighborhood_markers.pop()"
    ]
